tests/reference/asr-enum_01-30e1b4a.stderr
semantic error: Enumerations with non-integer or non-unique integer values cannot interoperate with C code.
 --> tests/errors/enum_01.py:5:1 - 8:19
  |
5 |    class Color(Enum):
  |    ^^^^^^^^^^^^^^^^^^...
...
  |
8 |        BLUE: f64 = 0.7
  | ...^^^^^^^^^^^^^^^^^^^ 


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
